fix: Resolves wrong colors for list-view of cmb

--- a/src/main/resources/fxml/css/global.css
+++ b/src/main/resources/fxml/css/global.css
@@ -131,6 +131,21 @@
 }
 
 .combo-box {
+    -fx-text-fill: white;
+    -fx-background-color: #3C3C3C;
+    -fx-background-radius: 1em;
+    -fx-border-radius: 1em;
+}
+
+.combo-box-popup {
+    -fx-text-fill: #EEEEEE;
+    -fx-background-color: #3C3C3C;
+    -fx-background-radius: 1em;
+    -fx-border-radius: 1em;
+}
+
+.combo-box-popup .list-view {
+    -fx-text-fill: #EEEEEE;
     -fx-background-color: #3C3C3C;
     -fx-background-radius: 1em;
     -fx-border-radius: 1em;
